[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
deadpool-postgres = "0.9"
dotenv = "0.15"
nom = "^5.1.2"

[dependencies.sqlx]
version = "0.5"
features = ["postgres", "runtime-actix-native-tls", "macros", "chrono"]

